--- a/styles/summary.css
+++ b/styles/summary.css
@@ -262,10 +262,6 @@
         max-width: 396px;
     }
 
-    .title h1 {
-        font-size: 3rem;
-    }
-
     .title span {
         font-size: 1.25rem;
     }
